@@ -52,6 +52,7 @@ CAY-2411 Wrong resolution of ExtendedType with ValueObjectType for inherited cla
 CAY-2418 Modeler: unable to edit entity selected via Search
 CAY-2419 Modeler: Not changing highlight on selecting search results within one entity
 CAY-2420 Modeler: search is not performed for Stored Procedures
+CAY-2426 Modeler: Generate DB Schema: no relationships are created by running Create FK Support separately
 
 ----------------------------------
 Release: 4.1.M1
